# GPM-rework

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  Cargo.toml  QUICKSTART.md  README.md  SUBMODULE_INTEGRATION.md  TEAM_CHECKLIST.md  build.ps1  build.sh  main.py  pyproject.toml  requirements.txt
application/: command_sequencer.py  exceptions.py  grip_controller.py  hardware.py  logging_config.py  safety_monitor.py  state_machine.py  telemetry.py
config/: config.yaml  constants.py
docs/: MANAGER_PATTERN.md  PYTHON_DEVELOPMENT.md
gpm/: __init__.py  bms.pyi  emg.pyi  fsr.pyi  maestro.pyi
src/: lib.rs
src/hardware/: adc.rs  bms.rs  emg.rs  fsr.rs  maestro.rs  mod.rs
src/python_bindings/: bms.rs  emg.rs  fsr.rs  maestro.rs  manager.rs  mod.rs
tests/: test_grip_controller.py  test_safety_monitor.py  test_state_machine.py
tests/fixtures/: mock_hardware.py
ui/: cli.py  web_dashboard.py
